--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/Authentification/bin/Debug/netcoreapp2.1/Authentification.dll",
+            "program": "${workspaceFolder}/Authentication/bin/Debug/netcoreapp2.1/Authentication.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/Authentification",
+            "cwd": "${workspaceFolder}/Authentication",
             // For more information about the 'console' field, see https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md#console-terminal-window
             "console": "internalConsole",
             "stopAtEntry": false,
