--- a/Authentication/Authentication.csproj
+++ b/Authentication/Authentication.csproj
@@ -7,6 +7,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <StartupObject>Authentication.Program</StartupObject>
   </PropertyGroup>
 
 </Project>
