--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -6,10 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="MySqlConnector" Version="0.47.1" />
+    <PackageReference Include="Serilog" Version="2.7.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="ServerConfig.xml">
+    <None Update="CFG\Authentication.cfg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
