--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="MySqlConnector" Version="0.47.1" />
     <PackageReference Include="Serilog" Version="2.7.1" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
   </ItemGroup>
 
   <ItemGroup>
