--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -5,16 +5,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="CFG\Authentication.ini" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="CFG\Authentication.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="ini-parser" Version="2.5.2" />
     <PackageReference Include="MySqlConnector" Version="0.47.1" />
     <PackageReference Include="Serilog" Version="2.7.1" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="CFG\Authentication.cfg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
 </Project>
