Legay launcher settings added

--- a/Core/CFG/Authentication.ini
+++ b/Core/CFG/Authentication.ini
@@ -38,3 +38,14 @@ EnableOldLauncherPacket = false
 ;This packet is disabled by default because nicknames are usually set via website.
 
 EnableNickNamePacket  = false
+
+; Uncomment these ONLY if legay launcher support is enabled (EnableOldLauncherPacket)
+; See also version.cfg located in client folder. Default for PF20 client is:
+;
+;Format			=  0
+;Launcher		=  8
+;Client         =  13
+;Updater        =  17
+;Sub            =  2
+;Option         =  0
+;Url            =  http://google.es  
