--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.3.0" />
     <PackageReference Include="ini-parser" Version="2.5.2" />
     <PackageReference Include="MySqlConnector" Version="0.47.1" />
     <PackageReference Include="Serilog" Version="2.7.1" />
