Basic game server compiles and authenticates

--- a/Core/CFG/Authentication.ini
+++ b/Core/CFG/Authentication.ini
@@ -28,7 +28,7 @@ SetLoggingLevel = 1
 SetMaximumGameServers = 15
 
 ;Only game servers matching this key will be accepted. Key characters: 1-10. Default is "WCPS-Standard"
-SetServerKey = "WCPS-Standard"
+SetServerKey = WCPS-Standard
 
 ;Enables legacy WR-CP1 launcher and updater by responding to the incoming packet. 
 ;This is disabled by default because both of them are old and pretty useless.
