Adding full async queries for authentication, authentication and core code refactor

--- a/Core/CFG/Authentication.ini
+++ b/Core/CFG/Authentication.ini
@@ -37,7 +37,7 @@ EnableOldLauncherPacket = false
 ;Enable the server to send a "new nickname" packet if database field is empty. 
 ;This packet is disabled by default because nicknames are usually set via website.
 
-EnableNickNamePacket  = false
+EnableNickNamePacket  = true
 
 ; Uncomment these ONLY if legay launcher support is enabled (EnableOldLauncherPacket)
 ; See also version.cfg located in client folder. Default for PF20 client is:
